ultimos ajustes
