# docs/swagger.json
@@ -746,9 +746,6 @@
         "usecase.CheckoutInputDTO": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "customer_cpf": {
                     "type": "string"
                 },
@@ -758,17 +755,8 @@
                 "gateway_id": {
                     "type": "string"
                 },
-                "gateway_transaction_id": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
                 "order_id": {
                     "type": "string"
-                },
-                "total": {
-                    "type": "number"
                 }
             }
         },
