# internal/core/usecase/checkout/create/checkout_dto.go
@@ -25,26 +25,22 @@ type CheckoutDTO struct {
 }
 
 type CheckoutInputDTO struct {
-	ID                   string    `json:"id"`
-	OrderID              string    `json:"order_id"`
-	Gateway              string    `json:"gateway"`
-	GatewayID            string    `json:"gateway_id"`
-	GatewayTransactionID string    `json:"gateway_transaction_id"`
-	CustomerCPF          string    `json:"customer_cpf"`
-	Total                float64   `json:"total"`
-	CreatedAt            time.Time `json:"created_at"`
+	OrderID     string `json:"order_id"`
+	Gateway     string `json:"gateway"`
+	GatewayID   string `json:"gateway_id"`
+	CustomerCPF string `json:"customer_cpf"`
 }
 
 func (dto *CheckoutInputDTO) ToEntity() *entity.Checkout {
 	return &entity.Checkout{
-		ID:                   dto.ID,
-		OrderID:              dto.OrderID,
-		Gateway:              dto.Gateway,
-		GatewayID:            dto.GatewayID,
-		GatewayTransactionID: dto.GatewayTransactionID,
-		CustomerCPF:          dto.CustomerCPF,
-		Total:                dto.Total,
-		CreatedAt:            dto.CreatedAt,
+		//ID:                   dto.ID,
+		OrderID:   dto.OrderID,
+		Gateway:   dto.Gateway,
+		GatewayID: dto.GatewayID,
+		//GatewayTransactionID: dto.GatewayTransactionID,
+		CustomerCPF: dto.CustomerCPF,
+		//Total:                dto.Total,
+		//CreatedAt:            dto.CreatedAt,
 	}
 }
 
